--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "dependencies": {
     "gzippo": "^0.2.0",
-    "express": "^4.7.0"
+    "express": "^4.7.0",
+    "connect": "^3.1.0",
+    "logger": "0.0.1",
+    "morgan": "^1.2.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
